// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExportToCdsModal renders modal for one paper 1`] = `
<Modal
  confirmLoading={false}
  footer={
    Array [
      <ForwardRef(InternalButton)
        onClick={[MockFunction]}
        type="primary"
      >
        Confirm
      </ForwardRef(InternalButton)>,
    ]
  }
  okType="primary"
  onCancel={[MockFunction]}
  open={false}
  visible={true}
  width={520}
>
  <p>
    You have selected 
    1
     
    paper
    .
    <br />
    Are you sure you want to export it to CDS?
  </p>
</Modal>
`;

exports[`ExportToCdsModal renders not visible 1`] = `
<Modal
  confirmLoading={false}
  footer={
    Array [
      <ForwardRef(InternalButton)
        onClick={[MockFunction]}
        type="primary"
      >
        Confirm
      </ForwardRef(InternalButton)>,
    ]
  }
  okType="primary"
  onCancel={[MockFunction]}
  open={false}
  width={520}
>
  <p>
    You have selected 
    1
     
    paper
    .
    <br />
    Are you sure you want to export it to CDS?
  </p>
</Modal>
`;
